# crabbletalk

./: .gitignore  Cargo.toml  README.md  REUSE.toml  rustfmt.toml
crabbletalk-afpd/: Cargo.toml
crabbletalk-afpd/src/: lib.rs  main.rs
cruats/: Cargo.toml  at.h  build_.rs
cruats/src/: at.rs  lib.rs
cruats_rt_c/: Cargo.toml  build.rs  cbindgen.toml  cruats_rt_c.h
cruats_rt_c/src/: lib.rs
src/: aarp.rs  addr.rs  ddp.rs  lib.rs  link.rs
