# © 2022 <_@habnab.it>
#
# SPDX-License-Identifier: MPL-2.0

[package]
name = "crabbletalk"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"

[dependencies]
packed_struct = "0.10.0"
thiserror = "1.0.30"
pnet = "0.29.0"
pnet_base = "0.29.0"
pnet_macros = "0.29.0"
pnet_macros_support = "0.29.0"
pnet_packet = "0.29.0"
retainer = "0.3.0"
chrono = "0.4.23"

[dependencies.rand]
version = "0.8.5"
features = ["getrandom"]

[dependencies.tokio]
version = "1"
default_features = false
features = ["time", "sync", "rt"]

[dependencies.tokio-stream]
version = "0.1.8"
features = ["sync"]

[dependencies.async-once-cell]
version = "0.4.2"
features = ["unpin"]
