[package]
name = "crabbletalk-afpd"
version = "0.1.0"
edition = "2021"

[lib]

[[bin]]
name = "crabbletalk-afpd"
path = "src/bin/afpd.rs"

[[bin]]
name = "crabbletalk-router"
path = "src/bin/router.rs"

[[bin]]
name = "crabbletalk-qemu-client"
path = "src/bin/qemu_client.rs"

[[bin]]
name = "cruatsd"
path = "src/bin/cruatsd.rs"

[[bin]]
name = "ctkping"
path = "src/bin/ctkping.rs"

[dependencies]
anyhow = "1.0.55"
chrono = "0.4.19"
getrandom = "0.2.5"
pcap-file = "1.1.1"
pnet = "0.29.0"
structopt = "0.3.26"
tempfile = "3.3.0"
console-subscriber = "*"
packed_struct = "*"

[dependencies.sendfd]
version = "0.4.1"
features = ["tokio"]

[dependencies.clap]
version = "3.1.6"
features = ["derive"]

[dependencies.crabbletalk]
path = ".."

[dependencies.cruats]
path = "../cruats"

[dependencies.tokio]
version = "1.15"
features = ["full", "tracing"]

[target."cfg(windows)".dependencies]
winreg = "0.10.1"

[target."cfg(unix)".dependencies]
nix = "0.23.1"
