[package]
name = "cruats"
version = "0.1.0"
edition = "2021"

[lib]
#name = "cruats_rt_c"
#crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.55"
chrono = "0.4.19"
getrandom = "0.2.5"
pcap-file = "1.1.1"
pnet = "0.29.0"
structopt = "0.3.26"
tempfile = "3.3.0"
console-subscriber = "*"
zerocopy = "*"

[dependencies.clap]
version = "3.1.6"
features = ["derive"]

[dependencies.crabbletalk]
path = ".."

[dependencies.tokio]
version = "1.15"
features = ["full", "tracing"]

[target."cfg(windows)".dependencies]
winreg = "0.10.1"

[target."cfg(unix)".dependencies]
nix = "0.23.1"

# [build-dependencies]
# anyhow = "1.0.55"
# bindgen = "0.59.2"
